subworkflow doc continuation + mutli-fixes : changed collapsing of some sidebar sections, change pagefind for DocSearch, fixes to css, sanity fixes all around

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -64,4 +64,9 @@ img {
 	padding-left: 2rem;
 }
 
+.tablist-wrapper > ul li {
+	list-style-type: inherit;
+	margin-left: inherit;
+}
+
 .expressive-code .copy .no-copy button  { display: none; }
